...
            <objects>
                <tableViewController id="pju-7v-bYa" customClass="FQSearchTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Eij-Hq-eqc">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search for venues" id="taJ-0m-tLl">
                            <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                            <textInputTraits key="textInputTraits" returnKeyType="search"/>
                            <connections>
                                <outlet property="delegate" destination="pju-7v-bYa" id="aKM-a8-ok2"/>
                            </connections>
...
